--- a/TriviaGame/app/src/main/res/layout/activity_questions_screen.xml
+++ b/TriviaGame/app/src/main/res/layout/activity_questions_screen.xml
@@ -84,22 +84,22 @@
         android:id="@+id/Answer1BTN"
         android:layout_width="218dp"
         android:layout_height="86dp"
-        android:background="@color/Gray"
+        android:background="@drawable/menubutton"
         android:text="Answer 1"
-        android:textSize="14sp"
         android:textColor="@color/White"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.50" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/Answer2BTN"
         android:layout_width="218dp"
         android:layout_height="86dp"
         android:text="Answer 2"
+        android:textSize="24sp"
         android:background="@drawable/menubutton"
         android:textColor="@color/White"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -114,6 +114,7 @@
         android:layout_width="218dp"
         android:layout_height="86dp"
         android:text="Answer 3"
+        android:textSize="24sp"
         android:background="@drawable/menubutton"
         android:textColor="@color/White"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -128,6 +129,7 @@
         android:layout_width="218dp"
         android:layout_height="86dp"
         android:text="Answer 4"
+        android:textSize="24sp"
         android:background="@drawable/menubutton"
         android:textColor="@color/White"
         app:layout_constraintBottom_toBottomOf="parent"
