--- a/TriviaGame/app/src/main/res/layout/activity_questions_screen.xml
+++ b/TriviaGame/app/src/main/res/layout/activity_questions_screen.xml
@@ -24,15 +24,15 @@
 
     <ImageView
         android:layout_width="700dp"
-        android:layout_height="100dp"
-        android:textAlignment="center"
+        android:layout_height="356dp"
         android:background="@color/BlueGray"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.40"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.00"
-        app:layout_constraintHorizontal_bias="0.40"/>
+        app:layout_constraintVertical_bias="0.00" />
 
     <TextView
         android:id="@+id/QuestionText"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:text="Questions"
-        android:textColor="@color/Black"
+        android:textColor="@color/White"
         android:textSize="38sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
