Added login and create account

--- a/TriviaGame/app/src/main/res/layout/activity_main_menu.xml
+++ b/TriviaGame/app/src/main/res/layout/activity_main_menu.xml
@@ -110,4 +110,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.996" />
 
+    <Button
+        android:id="@+id/Login"
+        android:layout_width="127dp"
+        android:layout_height="63dp"
+        android:background="@drawable/menubutton"
+        android:gravity="center"
+        android:text="Login"
+        android:textColor="@color/White"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.033"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.02" />
+
 </android.support.constraint.ConstraintLayout>
