--- a/TriviaGame/app/src/main/res/layout/activity_credits_screen.xml
+++ b/TriviaGame/app/src/main/res/layout/activity_credits_screen.xml
@@ -7,51 +7,76 @@
     tools:context="fullsailclass.triviagame.CreditsScreen"
     android:background="@drawable/background1">
 
+    <ImageView
+        android:id="@+id/CreditsView"
+        android:layout_width="386dp"
+        android:layout_height="258dp"
+        android:alpha="0.7"
+        android:background="@color/BlueGray"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.562"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.643" />
+
+    <ImageView
+        android:id="@+id/CreditsView2"
+        android:layout_width="386dp"
+        android:layout_height="200dp"
+        android:alpha="0.7"
+        android:background="@color/BlueGray"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.568"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.226" />
+
     <TextView
         android:id="@+id/ProgrammedByText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Programmed by:"
+        android:textColor="@color/White"
+        android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.54"
-        android:textColor="@color/Black"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.469"
-        android:textSize="16dp"
-        />
+        app:layout_constraintVertical_bias="0.469" />
 
     <TextView
         android:id="@+id/ProgramNamesText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Jose Otero Perez\nand\nJesus Antonio Fragoso Jr."
-        android:textColor="@color/Black"
         android:textAlignment="center"
+        android:textColor="@color/White"
+        android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.556"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.572"
-        android:textSize="18dp"
-        />
+        app:layout_constraintVertical_bias="0.572" />
 
     <TextView
         android:id="@+id/ProducedByText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Produced by:"
+        android:textColor="@color/White"
+        android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.539"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/Black"
-        app:layout_constraintVertical_bias="0.25"
-        android:textSize="16dp"
-        />
+        app:layout_constraintVertical_bias="0.25" />
 
     <TextView
         android:id="@+id/ProducedNamesText"
@@ -59,31 +84,29 @@
         android:layout_height="wrap_content"
         android:text="Fredy Sanguinetti"
         android:textAlignment="center"
+        android:textColor="@color/White"
+        android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.55"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/Black"
-        app:layout_constraintVertical_bias="0.31"
-        android:textSize="18dp"
-        />
+        app:layout_constraintVertical_bias="0.31" />
+
     <TextView
         android:id="@+id/MusicCredit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Music: www.bensound.com"
         android:textAlignment="center"
+        android:textColor="@color/White"
+        android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.55"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/Black"
-        app:layout_constraintVertical_bias="0.7"
-        android:textSize="18dp"
-        />
-
+        app:layout_constraintVertical_bias="0.7" />
 
 
     <Button
