--- a/TriviaGame/app/src/main/res/layout/activity_questions_screen.xml
+++ b/TriviaGame/app/src/main/res/layout/activity_questions_screen.xml
@@ -53,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="Questions"
+        android:text=""
         android:textColor="@color/White"
         android:textSize="38sp"
         android:textStyle="bold"
@@ -101,7 +101,7 @@
         android:layout_width="218dp"
         android:layout_height="86dp"
         android:background="@drawable/menubutton"
-        android:text="Answer 1"
+        android:text=""
         android:textColor="@color/White"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -114,7 +114,7 @@
         android:id="@+id/Answer2BTN"
         android:layout_width="218dp"
         android:layout_height="86dp"
-        android:text="Answer 2"
+        android:text=""
         android:textSize="24sp"
         android:background="@drawable/menubutton"
         android:textColor="@color/White"
@@ -129,7 +129,7 @@
         android:id="@+id/Answer3BTN"
         android:layout_width="218dp"
         android:layout_height="86dp"
-        android:text="Answer 3"
+        android:text=""
         android:textSize="24sp"
         android:background="@drawable/menubutton"
         android:textColor="@color/White"
@@ -144,7 +144,7 @@
         android:id="@+id/Answer4BTN"
         android:layout_width="218dp"
         android:layout_height="86dp"
-        android:text="Answer 4"
+        android:text=""
         android:textSize="24sp"
         android:background="@drawable/menubutton"
         android:textColor="@color/White"
