--- a/TriviaGame/app/src/main/res/layout/activity_settings_screen.xml
+++ b/TriviaGame/app/src/main/res/layout/activity_settings_screen.xml
@@ -137,6 +137,7 @@
         android:layout_width="wrap_content"
         android:layout_height="41dp"
         android:ems="10"
+        android:maxLength="3"
         android:gravity="center"
         android:inputType="number"
         android:selectAllOnFocus="false"
@@ -163,6 +164,7 @@
 
     <EditText
         android:id="@+id/TimeNum"
+        android:maxLength="3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
