--- a/TriviaGame/app/src/main/res/layout/triviaself_create.xml
+++ b/TriviaGame/app/src/main/res/layout/triviaself_create.xml
@@ -46,7 +46,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Correct Question"
+        android:text="Correct Answer"
         android:textSize="22dp"
         android:textStyle="bold"
         android:textColor="@color/Black"
